--- a/main.css
+++ b/main.css
@@ -1,10 +1,13 @@
 body{
   background-color: #D24D57;
   background-image: url(./placeholder-big.jpg);
+  background-size: cover;
+  height: 100vh;
   background-position: 50% 50%;
-  background-attachment: fixed;
-  margin:0;
+  /*background-attachment: fixed;*/
+  /*margin:0;*/
   font-size: 16px;
+  position: relative;
 }
 
 nav {
@@ -25,11 +28,14 @@ nav > i.fa {
 }
 
 .main {
-  margin: auto;
-  margin-top: 40px;
-  margin-bottom: 10px;
-  /*width: 36rem;*/
+  position: absolute;
   width: 520px;
+  height: 489px;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
   max-width: 550px;
   padding-right: 15px;
   padding-left: 15px;
